--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
