--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  
   "scripts": {
     "dev": "node src/index.js"
   },
@@ -24,6 +23,8 @@
     "mongoose": "^8.0.3",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.2"
+    "nodemailer": "^6.9.12",
+    "nodemon": "^3.0.2",
+    "randomstring": "^1.3.0"
   }
 }
