--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "D": "^1.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fetch": "^1.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
@@ -25,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.0.2",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "tesseract.js": "^5.0.5"
   }
 }
